
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int SHELLCODE () ;
 int fork () ;
 int printBytes () ;
 int system (char*) ;

int main ()
{


int pid = fork();
    if(pid == 0){

 SHELLCODE();



 }else if(pid > 0){


 printBytes();

 }
return 0;
system("exit");
}
